@startuml

title __TASK's Class Diagram__\n

  namespace com.itbird {
    namespace task {
      class com.itbird.task.MainTestActivity {
          {static} - TAG : String
          # onCreate()
          # onDestroy()
          # onNewIntent()
      }
    }
  }
  

  namespace com.itbird {
    namespace task {
      class com.itbird.task.SecondTestActivity {
          {static} - TAG : String
          # onCreate()
          # onDestroy()
          # onNewIntent()
      }
    }
  }
  

  namespace com.itbird {
    namespace task {
      class com.itbird.task.ThirdTestActivity {
          {static} - TAG : String
          # onCreate()
          # onDestroy()
          # onNewIntent()
      }
    }
  }
  

  com.itbird.task.MainTestActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.itbird.task.SecondTestActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.itbird.task.ThirdTestActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
